added state of the art

--- a/bachproef/bachproef-tin.tex
+++ b/bachproef/bachproef-tin.tex
@@ -11,17 +11,19 @@
 % TODO: Vul dit aan met je eigen info:
 
 % De titel van het rapport/bachelorproef
-\title{Titel}
+\title{How the change detection strategy affects
+    performance in Angular applications with
+    high-frequency updates}
 
 % Je eigen naam
-\author{Steven Stevens}
+\author{Thomas Duchatelet}
 
 % De naam van je promotor (lector van de opleiding)
-\promotor{Jan Janssens}
+\promotor{Thomas Aelbrecht}
 
 % De naam van je co-promotor. Als je promotor ook je opdrachtgever is en je
 % dus ook inhoudelijk begeleidt (en enkel dan!), mag je dit leeg laten.
-\copromotor{Piet Pieters}
+\copromotor{Bonnie Brennan}
 
 % Indien je bachelorproef in opdracht van/in samenwerking met een bedrijf of
 % externe organisatie geschreven is, geef je hier de naam. Zoniet laat je dit
@@ -29,7 +31,7 @@
 \instelling{---}
 
 % Academiejaar
-\academiejaar{2018-2019}
+\academiejaar{2020-2021}
 
 % Examenperiode
 %  - 1e semester = 1e examenperiode => 1
@@ -48,15 +50,15 @@
 % uit commentaar. Let op: de tekst op de voorkaft blijft in het Nederlands, en
 % dat is ook de bedoeling!
 
-%\selectlanguage{english}
+\selectlanguage{english}
 
 %---------- Titelblad ----------------------------------------------------------
 \inserttitlepage
 
 %---------- Samenvatting, voorwoord --------------------------------------------
 \usechapterimagefalse
-\input{voorwoord}
-\input{samenvatting}
+%\input{voorwoord}
+%\input{samenvatting}
 
 %---------- Inhoudstafel -------------------------------------------------------
 \pagestyle{empty} % Geen hoofding
@@ -89,9 +91,9 @@
 % om bijvoorbeeld de inleiding en/of stand van zaken over meerdere hoofdstukken
 % te verspreiden!
 
-\input{inleiding}
+%\input{inleiding}
 \input{standvanzaken}
-\input{methodologie}
+%\input{methodologie}
 
 % Voeg hier je eigen hoofdstukken toe die de ``corpus'' van je bachelorproef
 % vormen. De structuur en titels hangen af van je eigen onderzoek. Je kan bv.
@@ -101,7 +103,7 @@
 %\input{...}
 %...
 
-\input{conclusie}
+%\input{conclusie}
 
 %%=============================================================================
 %% Bijlagen
@@ -112,12 +114,12 @@
 
 %%---------- Onderzoeksvoorstel -----------------------------------------------
 
-\chapter{Onderzoeksvoorstel}
+%\chapter{Onderzoeksvoorstel}
 
-Het onderwerp van deze bachelorproef is gebaseerd op een onderzoeksvoorstel dat vooraf werd beoordeeld door de promotor. Dat voorstel is opgenomen in deze bijlage.
+%Het onderwerp van deze bachelorproef is gebaseerd op een onderzoeksvoorstel dat vooraf werd beoordeeld door de promotor. Dat %voorstel is opgenomen in deze bijlage.
 
 % Verwijzing naar het bestand met de inhoud van het onderzoeksvoorstel
-\input{../voorstel/voorstel-inhoud}
+%\input{../voorstel/voorstel-inhoud}
 
 %%---------- Andere bijlagen --------------------------------------------------
 % TODO: Voeg hier eventuele andere bijlagen toe
