--- a/voorstel/naam_voornaam_voorstel.tex
+++ b/voorstel/naam_voornaam_voorstel.tex
@@ -18,7 +18,9 @@
 \documentclass{voorstel}
 
 \usepackage{lipsum}
-
+\usepackage{cfr-lm}
+\usepackage{graphicx}
+\graphicspath{ {./} }
 %------------------------------------------------------------------------------
 % Metadata over het voorstel
 %------------------------------------------------------------------------------
@@ -26,25 +28,25 @@
 %---------- Titel & auteur ----------------------------------------------------
 
 % TODO: geef werktitel van je eigen voorstel op
-\PaperTitle{Titel voorstel}
-\PaperType{Onderzoeksvoorstel Bachelorproef 2019-2020} % Type document
+\PaperTitle{How the change detection strategy affects performance in Angular applications with high-frequency updates}
+\PaperType{Research proposal bachelor's thesis 2020-2021} % Type document
 
 % TODO: vul je eigen naam in als auteur, geef ook je emailadres mee!
-\Authors{Steven Stevens\textsuperscript{1}} % Authors
-\CoPromotor{Piet Pieters\textsuperscript{2} (Bedrijfsnaam)}
+\Authors{Duchatelet Thomas\textsuperscript{1}} % Authors
+\CoPromotor{Bonnie Brennan\textsuperscript{2} (Angular Nation)}
 \affiliation{\textbf{Contact:}
-  \textsuperscript{1} \href{mailto:steven.stevens.u1234@student.hogent.be}{steven.stevens.u1234@student.hogent.be};
-  \textsuperscript{2} \href{mailto:piet.pieters@acme.be}{piet.pieters@acme.be};
+  \textsuperscript{1} \href{mailto:thomas.duchatelet.y3284@student.hogent.be}{thomas.duchatelet.y3284@student.hogent.be};
+  \textsuperscript{2} \href{mailto:bjbrennan75@gmail.com}{bjbrennan75@gmail.com};
 }
 
 %---------- Abstract ----------------------------------------------------------
+\renewcommand{\abstractname}{Abstract} % Defines the abstracts heading name
+\Abstract{
+Angular is a widely used web-framework and is a popular choice for developing all kinds of webapplications. Since Angular can be used to build reactive platforms, it might be suitable for realtime monitoring dashboards. Since humanity constantly tries to improve their tools, modern technologies are implemented for providing insights on big amounts of data. With the rise of the 'Internet of Things', the demand for realtime monitoring dashboards is also increasing. As IoT devices most of the time change state frequently, the default change detection strategy might not be the best solution for this case. Each strategy will be implemented and tested with high-frequency updates to investigate the effect of alternative strategies on the performance of the application. After comparing each scenario, it is expected to illustrate that performance can be maximized by implementing an alternative change detection strategy. This could lead to more responsive webapplications and more visually pleasing dashboards.
 
-\Abstract{Hier schrijf je de samenvatting van je voorstel, als een doorlopende tekst van één paragraaf. Wat hier zeker in moet vermeld worden: \textbf{Context} (Waarom is dit werk belangrijk?); \textbf{Nood} (Waarom moet dit onderzocht worden?); \textbf{Taak} (Wat ga je (ongeveer) doen?); \textbf{Object} (Wat staat in dit document geschreven?); \textbf{Resultaat} (Wat verwacht je van je onderzoek?); \textbf{Conclusie} (Wat verwacht je van van de conclusies?); \textbf{Perspectief} (Wat zegt de toekomst voor dit werk?).
-
-Bij de sleutelwoorden geef je het onderzoeksdomein, samen met andere sleutelwoorden die je werk beschrijven.
-
-Vergeet ook niet je co-promotor op te geven.
+This thesis will be mentored by Bonnie Brennan (Angular Nation) and will therefore be written in English.
 }
+
 
 %---------- Onderzoeksdomein en sleutelwoorden --------------------------------
 % TODO: Sleutelwoorden:
@@ -65,13 +67,15 @@ Vergeet ook niet je co-promotor op te geven.
 %
 % De andere sleutelwoorden zijn vrij te kiezen
 
-\Keywords{Onderzoeksdomein. Keyword1 --- Keyword2 --- Keyword3} % Keywords
-\newcommand{\keywordname}{Sleutelwoorden} % Defines the keywords heading name
+\Keywords{Web application development. Angular --- Change detection --- Performance} % Keywords
+\newcommand{\keywordname}{Keywords} % Defines the keywords heading name
 
 %---------- Titel, inhoud -----------------------------------------------------
 
 \begin{document}
-
+\renewcommand{\abstractname}{Abstract} % Defines the abstracts heading name
+\renewcommand{\contentsname}{Table of contents} % Defines the abstracts heading name
+\renewcommand\refname{References}
 \flushbottom % Makes all text pages the same height
 \maketitle % Print the title and abstract box
 \tableofcontents % Print the contents section
