--- a/voorstel/voorstel.cls
+++ b/voorstel/voorstel.cls
@@ -243,7 +243,7 @@ justification=raggedright]{caption}
 %----------------------------------------------------------------------
 
 \RequirePackage[backend=biber,style=apa]{biblatex}
-\DeclareLanguageMapping{dutch}{dutch-apa}
+\DeclareLanguageMapping{english}{english-apa}
 \addbibresource{voorstel.bib}
 
 \endinput
