--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -28,7 +28,6 @@ Given this we can state that an MPA uses server side rendering, while an SPA ren
 \autocite{Skolski}
 
 \section{What is Angular?}
-\subsection{Definition}
 Angular is a platform and framework for building single-page client applications using HTML and TypeScript developed and maintained by developers at Google.
 \autocite{Angular.io}
 
@@ -71,7 +70,6 @@ This set of features made AngularJs a good tool for creating SPA's. Though the f
 \end{figure}
 
 \subsection{Angular}
-\subsubsection{The update}
 The rising popularity of React required the AngularJs team to improve. In September 2016 Google released Angular 2. For now every version starting from Angular 2 is referred to as Angular. AngularJs is every version beneath Angular 2. The reason this naming is important is because of the breaking changes Angular 2 introduced. It is not possible to automatically update AngularJs to Angular and the migrations require a lot of rework.
 \autocite{Semenas2020}
 
@@ -84,6 +82,91 @@ In response to the one-way databinding React used, Angular lets the developer de
     \item Property
 \end{itemize}
 \autocite{AltexSoft}
+
+An example of one-way databinding from component to view in Angular is the usage of a component's property enclosed by two curly braces.
+\begin{lstlisting}[language=Javascript]
+	import { Component } from "@angular/core";
+	@Component({
+		selector: 'app-one-way-example',
+		template: '
+		<div>
+			<h1>{{title}}</h1>
+			<p>{{text}}</p>
+		</div>
+		'
+	})
+	
+	export class AppComponent {
+		title: string = "One-way databinding";
+		text:string = "Databinding is an interesting concept";
+	}
+\end{lstlisting}
+
+To bind a property in Angular, square brackets are used to evaluate the right-hand side of the assignment as a dynamic expression. Without brackets, the right-hand side would be treated as a string literal. In below example the appUrl property of the component is bound to the href property of the anchor element in the view.
+\begin{lstlisting}[language=Javascript]
+	import { Component } from "@angular/core";
+	@Component({
+		selector: 'app-property-example',
+		template: '
+		<div>
+			<a [href]="appUrl"></i>
+		</div>
+		'
+	})
+	
+	export class AppComponent {
+		appUrl: string = "https://www.google.com";
+	}
+\end{lstlisting}
+
+The event binding syntax consists of an event name within parentheses with a template statement. In below example the click event of the button int he view is bound to the sayHello statement in the component. Notice the one-way databinding used to show the modified text in the paragraph.
+\begin{lstlisting}[language=Javascript]
+	import { Component } from "@angular/core";
+	@Component({
+		selector: 'app-event-example',
+		template: '
+		<div>
+			<button (click)="sayHello()">Say hello!</button>
+			<p>{{text}}</p>
+		</div>
+		'
+	})
+	
+	export class AppComponent {
+		text: string = '';
+		
+		sayHello(): void {
+			this.text = 'Hello!';
+		}
+	}
+\end{lstlisting}
+
+
+Two-way databinding combines property binding with event binding with a combination of square brackets and parentheses as syntax. Further, input and output properties are used to pass data between the component and the view and vice-versa. In below example the input property in the component is bound to the name property in the component. When the user enters a new name, the name property in the component is changed. When the component changes the property itself, the changes are also reflected to the view.
+
+\begin{lstlisting}[language=Javascript]
+	import { Component } from "@angular/core";
+	@Component({
+		selector: 'app-two-way-example',
+		template: '
+		<div>
+			<input [(ngModel)]="name"></input>
+			<button (click)="changeNameToJohn()">Name me John</button>
+			<p>{{name}}</p>
+		</div>
+		'
+	})
+	
+	export class AppComponent {
+		name: string = '';
+		
+		changeNameToJohn(): void {
+			this.name = 'John';
+		}
+	}
+\end{lstlisting}
+
+
 \subsubsection{Modules and components}
 One of the key principles of Angular is the division of an application in modules and components.
 Angular is component based like React. The introduction of hierarchical components was a welcome change to deal with the performance issues and it improved code reusability as well. A component traditionally lives in a module, though with newer versions it is also possible to create stand-alone components which is still an experimental feature.
@@ -94,25 +177,6 @@ Every Angular application has a root module which takes care of the application 
     \caption{Angular component structure}
     \centering
     \includegraphics[width=\textwidth]{img/angularcomponent.png} 
-\end{figure}
-
-\subsubsection{State management}
-Additionally Angular contains a useful library called NgRx that functions as a state and data management tool. NgRx stands for 'Angular reactive extensions' and provides a state management solution based on redux for the Angular ecosystem. In Angular each component has one state and no idea of other component's states. NgRx allows to share this state by keeping it in a single store. This principle is also called the single source of truth. When no state management is implemented, the data is fetched from the back-end server each time a user navigates to the component where the data is shown. When the user modifies the data by performing a CRUD (Create, Read, Update, Delete) operation, the front-end makes a HTTP call to the server to save the modified data and then makes another call to recieve the latest state of the data. The data is stored in the component and lives along with the lifecycle of the component. When the component is destroyed by navigating to another component, it's data is cleared and should be fetched again from the server the next time the component is initialized. NgRx allows to reduce the number of unnecessary requests to the server by creating an in-memory database which contains data that is independent of the lifecycle of any component. This way the data that is fetched, survives during navigations in the application. This may improve the user experience because less loading indicators have to be displayed when data is already loaded. Instead, the modifications a user made are immediately reflected on the screen and saved to the server in the background. As developers don't want to write specific logic for all edge cases, NgRx contains a set of tools that can speed up development. There are five key concepts NgRx is based upon:
-\begin{enumerate}
-	\item Store
-	\item Actions
-	\item Reducers
-	\item Selectors
-	\item Effects
-\end{enumerate}
-
-A \emph{store} is a controlled state container mainly for managing global state across an entire application. It contains an observable of state and an observer of actions. \emph{Actions} describe unique events that are dispatched from components and services. Eg: When a user creates a new instance of an entity, a create action is called to add the object to the store. \emph{Reducers} are pure functions that take the current state and latest action as input and provide a new state as output. \emph{Selectors} are pure functions used to select slices of store state. Because the selectors are pure functions, the last result can be returned when arguments match so the functions doesn't have the need to be reinvoked. This practice is known as memoization and can provide performance benefits. \emph{effects} provide a way to interact with services and isolate those services from the components. In the effects, tasks such as fetching data and other external interations are handled. Effects perform tasks and return a new action. This way side effects are isolated from components, allowing for more pure components.
-
-\autocite{AltexSoft}
-\begin{figure}[h!]
-    \caption{NgRx mechanism}
-    \centering
-    \includegraphics[width=\textwidth]{img/ngrx.png} 
 \end{figure}
 
 \subsubsection{Automatic change detection}
@@ -135,6 +199,152 @@ One more advantage over AngularJs is that dependency injection became hierarchic
 \subsubsection{Downside}
 Many beginners will define Angular as a complex framework to start with. The framework contains lots of features and possibilities. This causes a steep learning curve. The Angular team provides continuous support and new features regularly which is welcomed by experienced developers on the one hand but makes the learning process more difficult for beginners on the other hand.
 \autocite{AltexSoft}
+
+\section {Reactive extensions}
+\subsection{NgRx}
+Additionally Angular contains a useful library called NgRx that functions as a state and data management tool. NgRx stands for 'Angular reactive extensions' and provides a state management solution inspired on redux for the Angular ecosystem. In Angular each component has one state and no idea of other component's states. NgRx allows to share this state by keeping it in a single store. This principle is also called the single source of truth. When no state management is implemented, the data is fetched from the back-end server each time a user navigates to the component where the data is shown. When the user modifies the data by performing a CRUD (Create, Read, Update, Delete) operation, the front-end makes a HTTP call to the server to save the modified data and then makes another call to recieve the latest state of the data. The data is stored in the component and lives along with the lifecycle of the component. When the component is destroyed by navigating to another component, it's data is cleared and should be fetched again from the server the next time the component is initialized. NgRx allows to reduce the number of unnecessary requests to the server by creating an in-memory database which contains data that is independent to the lifecycle of any component. This way the data that is fetched, survives during navigations in the application. This may improve the user experience because less loading indicators have to be displayed when data is already loaded. Instead, the modifications a user made are immediately reflected on the screen and saved to the server in the background. As developers don't want to write specific logic for all edge cases, NgRx contains a set of tools that can speed up development. There are five key concepts NgRx is based upon:
+\begin{enumerate}
+	\item Store
+	\item Actions
+	\item Reducers
+	\item Selectors
+	\item Effects
+\end{enumerate}
+
+A \emph{store} is a controlled state container mainly for managing global state across an entire application. It contains an observable of state and an observer of actions. \emph{Actions} describe unique events that are dispatched from components and services. Eg: When a user creates a new instance of an entity, a create action is called to add the object to the store. \emph{Reducers} are pure functions that take the current state and latest action as input and provide a new state as output. \emph{Selectors} are pure functions used to select slices of store state. Because the selectors are pure functions, the last result can be returned when arguments match so the functions doesn't have the need to be reinvoked. This practice is known as memoization and can provide performance benefits. \emph{effects} provide a way to interact with services and isolate those services from the components. In the effects, tasks such as fetching data and other external interations are handled. Effects perform tasks and return a new action. This way side effects are isolated from components, allowing for more pure components.
+
+\autocite{AltexSoft}
+\begin{figure}[h!]
+	\caption{NgRx mechanism}
+	\centering
+	\includegraphics[width=\textwidth]{img/ngrx.png} 
+\end{figure}
+
+\subsection{RxJs}
+
+\section{Angular Ivy}
+\subsection{Definition}
+According to \textcite{Angular.io-ivy} is Ivy the code name for Angular's next-generation compilation and rendering pipeline. With the version 9 release of Angular, the new compiler and runtime instructions are used by default instead of the older compiler and runtime, known as View Engine.
+
+\subsection{Compiler}
+The Angular framework is a compiler. A component is written in Typescript and it's template is written in HTML with some additional Angular syntax (directives). When building, Angular compiles this code to a set of Javascript instructions who are able to create and modify the DOM when a component is rendered on the page. If Angular was a car, the compiler would be the engine.
+
+\subsection{Most important features}
+The release of Ivy opens up a lot of new potential features. Most of these features are still experimental as the Angular does not want to introduce breaking changes with the new update. Experimental methods are marked with the Greek letter \(\Theta\) (Theta) so developers know this could cause issues when updating. The most important features of Angular Ivy are:
+\begin{itemize}
+	\item Better build times by ahead-of-time (AOT) compilation
+	\item Smaller bundle size by improved tree-shaking
+	\item Metaprogramming by using higher order components \autocite{Savkin2018}
+	\item Lazy loading of components by using stand-alone components
+	\item New change detection system without Zone.js
+	\item Ease the publishing process of libraries to NPM
+\end{itemize}
+
+\autocite{Exbrayat2019}
+
+
+\section{Zone.js}
+A zone is an execution context that persists across async tasks. Zone.js provides an execution context, lifecycle hooks and a generic error handler for async operations. An execution context is an abstract concept that holds information about the environment where the current code is executed. When a function is excecuted in the JavaScript engine, there will be a new execution context which will determine the scope of variables and functions that can be accessed. Further it will determine the value of the keyword ‘this’. In the JavaScript engine, the value of 'this' depends on the function or class where it is called.
+
+One of the key concepts of zone.js is to provide an additional execution context, another ‘this’, further referred to as 'zoneThis'. The zone context does not replace the basic JavaScript context, but adds a simplified way to handle asynchronous code. When running inside the JavaScript engine, the context changes depending on how and where the function is executed. In zone.js the ‘zoneThis’ will preserve the execution context across asynchronous operations. The ‘zoneThis’ thus will not change as long as it is running within the same zone. For a synchronous operation, ‘zoneThis’ will be the zone it is running in. For an asynchronous operation, ‘zoneThis’ will be the zone where the operation is scheduled. ‘ZoneThis’ does noy really exists, the correct syntax to get the current execution context in Zone.js is Zone.current.
+Zone.js also provides interceptable lifecycle hooks:
+\begin{itemize}
+	\item onFork
+	\item onIntercept
+	\item onInvoke
+	\item onHandleError
+	\item onScheduleTask
+	\item onInvokeTask
+	\item onCancelTask
+	\item onHasTask
+\end{itemize}
+
+Below code-examples will demonstrate the use of zone lifecycle hooks.
+
+\begin{lstlisting}[language=Javascript]
+	// performance counts the time passed between start and end
+	performance.start();
+	a();
+	// Imagine c and d are async methods
+	setTimeout(c);
+	setTimeout(d);
+	b();
+	performance.end();
+\end{lstlisting}
+
+
+If the code in above example is executed in the JavaScript engine, the call stack would look as following: 
+
+\begin{tikzpicture}[stack/.style={rectangle split, rectangle split parts=#1,draw, anchor=center}]
+	\node[stack=6]  {
+		\nodepart{one}performance.start();
+		\nodepart{two}a();
+		\nodepart{three}b();
+		\nodepart{four}performance.end();
+		\nodepart{five}c();
+		\nodepart{six}d();
+	};
+\end{tikzpicture}
+
+This is because the setTimeout functions as an asyc method that places the callback at the end of the stack. This causes the performance test to only measure the performance of a and b. If we also want to measure the performance of c and d, Zone.js can come to help. In the following example, the onInvokeTask hook is used to start a test before the callback (c or d) of an async method is executed and end the test after.
+
+\begin{lstlisting}[language=Javascript]
+	// Declare a zone and declare the onInvokeTask hook
+	ZoneA = {
+		onInvokeTask: (callback) => {
+			performance.start();
+			// Execute the callback (c or d) during a performance test
+			callback();
+			performance.end();
+		}	
+	};
+	// run the zone declared above
+	ZoneA.run(() => {
+		performance.start();
+		a();
+		// Imagine c and d are async methods
+		setTimeout(c);
+		setTimeout(d);
+		b();
+		performance.end();
+	});
+\end{lstlisting}
+
+Using the zone onInvokeTask method will result in following call stack:
+
+\begin{tikzpicture}[stack/.style={rectangle split, rectangle split parts=#1,draw, anchor=center}]
+	\node[stack=10]  {
+		\nodepart{one}performance.start();
+		\nodepart{two}a();
+		\nodepart{three}b();
+		\nodepart{four}performance.end();
+		\nodepart{five}performance.start();
+		\nodepart{six}c();
+		\nodepart{seven}performance.end();
+		\nodepart{eight}performance.start();
+		\nodepart{nine}d();
+		\nodepart{ten}performance.end();
+	};
+\end{tikzpicture}
+
+Now the asynchronous methods or tasks get their own performance test.
+With onInvokeTask the asynchronous methods can be intercepted and additional instructions can be added to fit the call in an environment (like triggering change detection after an asynchronous api call in Angular).
+
+\subsection{Useful cases for Zone.js}
+Zone.js can help developers in many areas: 
+\begin{itemize}
+	\item Error handling
+	\item Testing
+	\item Debugging
+	\item Performance measure
+	\item Framework autorendering
+	\item User action tracing
+	\item Resource releasing
+\end{itemize}
+
+This thesis will focus on the framework autorendering use case.
+
+
 
 \section{Change detection strategies in Angular}
 \subsection{Default}
@@ -174,61 +384,8 @@ Thanks to the custom strategy implemented by the developer, Angular will not upd
 \end{itemize}
 \subsection{Zoneless}
 
-\section{Angular Ivy}
-\subsection{Definition}
-According to \textcite{Angular.io-ivy} is Ivy the code name for Angular's next-generation compilation and rendering pipeline. With the version 9 release of Angular, the new compiler and runtime instructions are used by default instead of the older compiler and runtime, known as View Engine.
-
-\subsection{Compiler}
-The Angular framework is a compiler. A component is written in Typescript and it's template is written in HTML with some additional Angular syntax (directives). When building, Angular compiles this code to a set of Javascript instructions who are able to create and modify the DOM when a component is rendered on the page. If Angular was a car, the compiler would be the engine.
-
-\subsection{Most important features}
-The release of Ivy opens up a lot of new potential features. Most of these features are still experimental as the Angular does not want to introduce breaking changes with the new update. Experimental methods are marked with the Greek letter \(\Theta\) (Theta) so developers know this could cause issues when updating. The most important features of Angular Ivy are:
-\begin{itemize}
-    \item Better build times by ahead-of-time (AOT) compilation
-    \item Smaller bundle size by improved tree-shaking
-    \item Metaprogramming by using higher order components \autocite{Savkin2018}
-    \item Lazy loading of components by using stand-alone components
-    \item New change detection system without Zone.js
-    \item Ease the publishing process of libraries to NPM
-\end{itemize}
-
-\autocite{Exbrayat2019}
 
 
-\section{Zone.js}
-A zone is an execution context that persists across async tasks. Zone.js provides an execution context, lifecycle hooks and a generic error handler for async operations. An execution context is an abstract concept that holds information about the environment where the current code is executed. When a function is excecuted in the JavaScript engine, there will be a new execution context which will determine the scope of variables and functions that can be accessed. Further it will determine the value of the keyword ‘this’. In the JavaScript engine, the value of 'this' depends on the function or class where it is called.
-
-One of the key concepts of zone.js is to provide an additional execution context, another ‘this’, further referred to as 'zoneThis'. The zone context does not replace the basic JavaScript context, but adds a simplified way to handle asynchronous code. When running inside the JavaScript engine, the context changes depending on how and where the function is executed. In zone.js the ‘zoneThis’ will preserve the execution context across asynchronous operations. The ‘zoneThis’ thus will not change as long as it is running within the same zone. For a synchronous operation, ‘zoneThis’ will be the zone it is running in. For an asynchronous operation, ‘zoneThis’ will be the zone where the operation is scheduled. ‘ZoneThis’ does noy really exists, the correct syntax to get the current execution context in Zone.js is Zone.current.
-Zone.js also provides interceptable lifecycle hooks:
-\begin{itemize}
-	\item onFork
-	\item onIntercept
-	\item onInvoke
-	\item onHandleError
-	\item onScheduleTask
-	\item onInvokeTask
-	\item onCancelTask
-	\item onHasTask
-\end{itemize}
-
-In the following code example the usage of onInvokeTask is demonstrated:
-\begin{lstlisting}[language=Javascript]
-	ZoneA = {
-		onInvokeTask: (callback) => {
-			performance.start();
-			callback();
-			performance.end();
-		}	
-	};
-	ZoneA.run(() => {
-		performance.start();
-		a();
-		setTimeout(c);
-		setTimeout(d);
-		b();
-		performance.end();
-	});
-\end{lstlisting}
 
 \section{Typescript Decorators}
 
